# files-backuper

./: .env.example  .env.json  .gitignore  README.md  main.py  pyproject.toml  script.py
app/auth/: __init__.py  authenticator.py
app/config/: __init__.py  config.py
app/downloader/: downloader.py
app/logger/: logger.py
app/uploader/: __init__.py  uploader.py
